# QtInPractice

./: CMakeLists.txt  README.md
application/: application.qrc  main.cpp  mainwindow.cpp  mainwindow.hpp
file/: 2_test_result_1130.txt  main.cpp  resource.qrc  test_result_1130.txt
